# AgentSpaces

./: README.md  pyproject.toml
agentspaces/: __init__.py  agent.py  bus.py  contracts.py  logging.py  memory.py  tools.py
agentspaces.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agentspaces/examples/: __init__.py  echo_pipeline.py
examples/: __init__.py  echo_pipeline.py
tests/: test_smoke.py
